Sat Jan 24 21:31:10 CET 2009 Christian Anthon <anthon@kiku.dk>

	* analysis.c, backgammon.h, commands.inc: Add a command to rollout the
	current analysed move. "analyse rollout move 1 2 3" will rollout the
	first three candidates in the movelist.

Fri Jan 23 09:34:07 CET 2009 Christian Anthon <anthon@kiku.dk>

	* board3d/drawboard3d.c: Protect some function calls if shadows not
	initialised.

Thu Jan 22 23:33:24 CET 2009 Christian Anthon <anthon@kiku.dk>

	* eval.c, rollout.c: Stop adding noise to EvalOver and to the variance
	reduction. 

Thu Jan 22 12:42:57 CET 2009 Christian Anthon <anthon@kiku.dk>

	* relational.c: Asume that sql always uses . for decimal separator in
	input/output.

Sat Jan 17 21:57:31 CET 2009 Christian Anthon <anthon@kiku.dk>

	* rollout.c: Fix a small bug in BasicRollout. The first move (0-ply)
	in the variance reduction was cubeless, regardless of the cube
	setting. Only the cubeful 0-ply rollouts should be affected with
	infinite trials, but the variance reduction will change a bit for all
	rollouts.

Sun Jan 11 21:32:44 CET 2009 Christian Anthon <anthon@kiku.dk>

	* progress.c, progress.h, rollout.c, rollout.h: The JSD printed for
	cube rollouts is now sensible. Top JSD for nodouble / double decision
	and buttom JSD for take / pass decision. (MT code only)
	* rollout.c: minor cleanup in JSD for cubeless possible since the
	cube rollouts are always cubeful.

Sun Jan 11 01:06:47 CET 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: Add warning and cancel if fDoubled is set in SetMatchID

Sun Jan 11 00:07:30 CET 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: Allow canceling of dice on the first roll a match

Sat Jan 10 21:16:19 CET 2009 Christian Anthon <anthon@kiku.dk>

	* gtkgame.c: Make edit_new more smooth, and work with more obscure
	options

Fri Jan  9 14:06:05 CET 2009 Christian Anthon <anthon@kiku.dk>

	* play.c: set matchid was missing a call to AddGame

Fri Jan  9 13:00:25 CET 2009 Christian Anthon <anthon@kiku.dk>
